# eid0l0n

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  SKILL.md  pyproject.toml
assets/: persona.example.md
docs/: AGENT-PROTOCOL.md  HOST-COMPATIBILITY.md  MIGRATION-FROM-0.8.md
docs/superpowers/plans/: 2026-05-03-eidolon-0.9.0-rewrite.md
references/: AGENT-PROTOCOL.md  BACKENDS.md  MOOD-REGISTERS.md  PERSONA-GUIDE.md  intimate-channel.md  onboarding-flow.md  photo-spec.md  scene-craft.md
scripts/: backends.py  codex_backend.py  eidolon.py  generate.py  install.sh  setup.py  state.py  test_frontmatter.py
templates/: config.example.json
tests/: conftest.py  test_anchor_parsing.py  test_backend_selection.py  test_codex_backend.py  test_instructions_output.py  test_output_dir.py  test_prompt_building.py  test_setup_status.py  test_state_paths.py
